@@ -32,6 +32,11 @@
 #FAILURE_PREFIX="${FAILURE}*****${NORMAL}"
 #WARNING_PREFIX="${WARNING} *** ${NORMAL}"
 
+# Manually seet the right edge of message output (characters)
+# Useful when resetting console font during boot to override
+# automatic screen width detection
+#COLUMNS=120
+
 # Interactive startup
 #IPROMPT="yes" # Whether to display the interactive boot prompt
 #itime="3"    # The amount of time (in seconds) to display the prompt
