@@ -1,3 +1,6 @@
+2015-02-22 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Cosmetic changes to network scripts' output
+
 2015-02-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Modify ipv4-static to support ethernet labels
    * Output a newline if an interface is skipped during boot
